k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neuralnetjs
  labels:
    app: neuralnetjs
    env: production
